--- a/layout/Page.ejs
+++ b/layout/Page.ejs
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>A heading for the standard page</h1>
-        <%= page.body %>
+        <%- page.content %>
     </body>
 </html>
 
