--- a/layout/MainPage.ejs
+++ b/layout/MainPage.ejs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
-        <%= page.body %>
+        <%- page.content %>
     </body>
 </html>
 
