--- a/layout/section/blogroll.ejs
+++ b/layout/section/blogroll.ejs
@@ -7,7 +7,9 @@
                     <h1 class="entry-title"><a href="/blog/2016/05/29/socket-protocols/"><%- post.title %></a></h1>
                         <p class="meta">
                             <%- time(post.date) %>
-                            | <a href="/blog/2016/05/29/socket-protocols/#disqus_thread" data-disqus-identifier="http://lokiastari.com/blog/2016/05/29/socket-protocols/">Comments</a>
+                            <% if (config.comment && post.comments) { %>
+                                <%- comment(post) %>
+                            <% } %>
                         </p>
                 </header>
             </article>
