--- a/layout/section/blogroll.ejs
+++ b/layout/section/blogroll.ejs
@@ -1,19 +1,3 @@
 <% site.posts.forEach(function(post) { %>
-<div id="main">
-    <div id="content">
-        <div class="blog-index">
-            <article>
-                <header>
-                    <h1 class="entry-title"><a href="/blog/2016/05/29/socket-protocols/"><%- post.title %></a></h1>
-                        <p class="meta">
-                            <%- time(post.date) %>
-                            <% if (config.comment && post.comments) { %>
-                                <%- comment(post) %>
-                            <% } %>
-                        </p>
-                </header>
-            </article>
-        </div>
-    </div>
-</div>
+<%- include('excerpt', {post: post}); %>
 <% }); %>
