Define an article.
    Reworked some of the comment elements.
    Modified Footer so we can pull comments as well as count them

--- a/layout/section/blogroll.ejs
+++ b/layout/section/blogroll.ejs
@@ -1,3 +1,8 @@
 <% site.posts.forEach(function(post) { %>
-<%- include('excerpt', {post: post}); %>
+    <div class="blog-index">
+        <article>
+            <%- include('post-header', {post: post}) %>
+            <%- include('render', {post: post, postSize: config.excerptSize}); %>
+        </article>
+    </div>
 <% }); %>
