--- a/layout/main.ejs
+++ b/layout/main.ejs
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+<% config.disque.count = true; %>
 <%- include('section/head'); %>
 <body>
 <%- include('section/banner'); %>
-<%- include('section/blogroll'); %>
+<div id="main">
+    <div id="content">
+        <%- include('section/blogroll'); %>
+    </div>
+</div>
 <%- include('section/foot'); %>
+<% config.disque.count = false; %>
 </body>
 </html>
