--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,1 +1,13 @@
-Hi There
+<!DOCTYPE html>
+<html>
+<%- include('section/head'); %>
+<body>
+<%- include('section/banner'); %>
+<div id="main">
+    <div id="content">
+        <%- include('section/postbody'); %>
+    </div>
+</div>
+<%- include('section/foot'); %>
+</body>
+</html>
