Make the menu highlighting work

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -2,7 +2,7 @@
 <html>
 <%- include('section/head'); %>
 <body>
-<%- include('section/banner'); %>
+<%- include('section/banner', {highlite: 'about'}); %>
 <div id="main">
     <div id="content">
         <%- include('section/about'); %>
