--- a/layout/main.ejs
+++ b/layout/main.ejs
@@ -3,7 +3,7 @@
 <% config.disque.count = true; %>
 <%- include('section/head'); %>
 <body>
-<%- include('section/banner'); %>
+<%- include('section/banner', {highlite: 'blog'}); %>
 <div id="main">
     <div id="content">
         <%- include('section/blogroll'); %>
