--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -2,7 +2,7 @@
 <html>
 <%- include('section/head'); %>
 <body>
-<%- include('section/banner'); %>
+<%- include('section/banner', {highlite: 'blog'}); %>
 <div id="main">
     <div id="content">
         <%- include('section/postbody'); %>
