--- a/layout/section/post-footer.ejs
+++ b/layout/section/post-footer.ejs
@@ -2,7 +2,7 @@
     <p class="meta">
         <span class="byline author vcard">Posted by <span class="fn"><%- post.author %> (C)2016</span></span>
         <%- time(post.date) %>
-        <% if (post.categories.length != 0) { %>
+        <% if (post.categories && post.categories.length != 0) { %>
             <span class="categories">
             <% post.categories.forEach(function(category) { %>
                 <a class="category" href="/blog/categories/<%- category %>/"><%- category %></a>,
