--- a/layout/section/post-footer.ejs
+++ b/layout/section/post-footer.ejs
@@ -5,7 +5,7 @@
         <% if (post.categories && post.categories.length != 0) { %>
             <span class="categories">
             <% post.categories.forEach(function(category) { %>
-                <a class="category" href="/blog/categories/<%- category %>/"><%- category %></a>,
+                <a class="category" href="/categories/<%- category %>/"><%- category %></a>,
             <% }); %>
             </span>
         <% } %>
