--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -6,7 +6,10 @@
 <%- include('section/banner', {highlite: page.menu}); %>
 <div id="main">
     <div id="content">
-        <%- include(page.layout); %>
+        <div>
+            <%- include(page.layout); %>
+            <%- include('section/comment'); %>
+        </div>
     </div>
 </div>
 <%- include('section/foot'); %>
