--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -6,7 +6,7 @@
 <%- include('section/banner', {highlite: page.menu}); %>
 <div id="main">
     <div id="content">
-        <div>
+        <div class="blog-index">
             <%- include(page.layout); %>
             <%- include('section/comment'); %>
         </div>
