Added a sidebar and some basic sidebar plugins.

--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -10,6 +10,7 @@
             <%- include(page.layout); %>
             <%- include('section/comment'); %>
         </div>
+        <%- include('sidebar'); %>
     </div>
 </div>
 <%- include('section/foot'); %>
