Minor updates to make it logical

--- a/layout/section/foot.ejs
+++ b/layout/section/foot.ejs
@@ -7,7 +7,7 @@
 
 </footer>
 
-<% if (config.disqueSite) { %>
+<% if (config.commentSite) { %>
 <script type="text/javascript">
       var disqus_shortname = '<%- config.disque.site %>';
 
