Move everything to https

--- a/layout/section/foot.ejs
+++ b/layout/section/foot.ejs
@@ -1,7 +1,7 @@
 <footer role="contentinfo"><hr>
     <p>
         Copyright &copy; 2017 - <%- config.author %> -
-        <span class="credit">Powered by <a href="http://andvariToro.com">Andvari</a></span>
+        <span class="credit">Powered by <a href="https://andvariToro.com">Andvari</a></span>
         using the <a href="<%- config.themeGit %>">andvari-<%- config.theme %></a> theme</span>
     </p>
 
