--- a/layout/sidebar/twitter.ejs
+++ b/layout/sidebar/twitter.ejs
@@ -1,6 +1,6 @@
 <section class="well">
     <h1>Latest Tweets</h1>
-    <a href="http://twitter.com/<%- config.twitter.user %>" class="twitter-follow-button" data-show-count="">Follow @<%- config.twitter.user %></a>
+    <a href="https://twitter.com/<%- config.twitter.user %>" class="twitter-follow-button" data-show-count="">Follow @<%- config.twitter.user %></a>
     <ul id="tweets">
         <li class="post">
             <a class="twitter-timeline"  href="https://twitter.com/<%- config.twitter.user %>"  data-widget-id="406713536040030209">Tweets by @<%- config.twitter.user %></a>
